toutes routes testées sauf schoolReportLine